--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^3.0.0",
-    "inquirer": "^7.0.0"
+    "inquirer": "^7.0.0",
+    "node-fetch": "^2.6.0"
   }
 }
