--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^3.0.0",
+    "gray-matter": "^4.0.2",
     "inquirer": "^7.0.0",
-    "node-fetch": "^2.6.0"
+    "markdown-it": "^9.1.0",
+    "node-fetch": "^2.6.0",
+    "param-case": "^2.1.1",
+    "rimraf": "^3.0.0",
+    "title-case": "^2.1.1",
+    "twig": "^1.13.3"
   }
 }
