--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^3.0.0",
+    "feedme": "^1.2.0",
     "gray-matter": "^4.0.2",
     "highlight.js": "^9.15.10",
     "inquirer": "^7.0.0",
