--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "highlight.js": "^9.15.10",
     "inquirer": "^7.0.0",
     "markdown-it": "^9.1.0",
+    "markdown-it-toc-and-anchor": "^4.2.0",
     "node-fetch": "^2.6.0",
     "param-case": "^2.1.1",
     "rimraf": "^3.0.0",
