--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "markdown-it-toc-and-anchor": "^4.2.0",
     "node-fetch": "^2.6.0",
     "param-case": "^2.1.1",
+    "request": "^2.88.0",
     "rimraf": "^3.0.0",
     "title-case": "^2.1.1",
     "twig": "^1.13.3"
