--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docski",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Static docs generator from markdown",
   "bin": {
     "docski": "bin/docski.js"
@@ -10,12 +10,14 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.2",
+    "clone": "^2.1.2",
     "commander": "^3.0.0",
     "feedme": "^1.2.0",
     "gray-matter": "^4.0.2",
     "highlight.js": "^9.15.10",
     "inquirer": "^7.0.0",
     "markdown-it": "^9.1.0",
+    "markdown-it-external-links": "^0.0.6",
     "markdown-it-replace-link": "^1.0.1",
     "markdown-it-toc-and-anchor": "^4.2.0",
     "node-fetch": "^2.6.0",
@@ -23,6 +25,7 @@
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
     "title-case": "^2.1.1",
-    "twig": "^1.13.3"
+    "twig": "^1.13.3",
+    "uslug": "^1.0.4"
   }
 }
