--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docski",
-  "version": "1.0.14",
+  "version": "1.0.18",
   "description": "Static docs generator from markdown",
   "bin": {
     "docski": "bin/docski.js"
@@ -17,6 +17,7 @@
     "highlight.js": "^9.15.10",
     "html-minifier": "^4.0.0",
     "inquirer": "^7.0.0",
+    "lodash": "^4.17.15",
     "markdown-it": "^9.1.0",
     "markdown-it-external-links": "^0.0.6",
     "markdown-it-replace-link": "^1.0.1",
