--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docski",
-  "version": "1.1.4",
+  "version": "1.1.6",
   "description": "Static docs generator from markdown",
   "bin": {
     "docski": "bin/docski.js"
@@ -14,7 +14,6 @@
     "commander": "^3.0.0",
     "feedme": "^1.2.0",
     "gray-matter": "^4.0.2",
-    "highlight.js": "^9.15.10",
     "html-minifier": "^4.0.0",
     "inquirer": "^7.0.0",
     "lodash": "^4.17.15",
@@ -22,6 +21,7 @@
     "markdown-it-external-links": "^0.0.6",
     "markdown-it-replace-link": "^1.0.1",
     "param-case": "^2.1.1",
+    "prismjs": "^1.17.1",
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
     "title-case": "^2.1.1",
